# vsatak_plugin

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties
Poco/: ASCIIEncoding.h  AbstractCache.h  AbstractDelegate.h  AbstractEvent.h  (+332 more)
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  defaults.cfg  hello-jni.cpp  main-bridge.cpp  setenv-android.sh  test.txt  test2.txt
app/src/main/cpp/boost/1.72.0/: project-config.jam.1
app/src/main/cpp/boost/1.72.0/stage/lib/: libboost_iostreams.so.1.72.0  libboost_locale.so.1.72.0  libboost_log.so.1.72.0  libboost_log_setup.so.1.72.0  libboost_python27.so.1.72.0  libboost_regex.so.1.72.0
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_atomic-1.72.0/: boost_atomic-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_chrono-1.72.0/: boost_chrono-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_container-1.72.0/: boost_container-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_context-1.72.0/: boost_context-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_contract-1.72.0/: boost_contract-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_coroutine-1.72.0/: boost_coroutine-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_date_time-1.72.0/: boost_date_time-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_exception-1.72.0/: boost_exception-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_fiber-1.72.0/: boost_fiber-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_fiber_numa-1.72.0/: boost_fiber_numa-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_filesystem-1.72.0/: boost_filesystem-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_graph-1.72.0/: boost_graph-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_graph_parallel-1.72.0/: boost_graph_parallel-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_headers-1.72.0/: boost_headers-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_iostreams-1.72.0/: boost_iostreams-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_locale-1.72.0/: boost_locale-config.cmake  libboost_locale-variant-static.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_log-1.72.0/: boost_log-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_log_setup-1.72.0/: boost_log_setup-config.cmake
app/src/main/cpp/boost/1.72.0/stage/lib/cmake/boost_math_c99-1.72.0/: boost_math_c99-config.cmake
app/src/main/cpp/gflags/: CMakeLists.txt  cmake_install.cmake  cmake_uninstall.cmake  gflags-nonamespace-targets.cmake  gflags-targets.cmake  install_manifest.txt
app/src/main/cpp/gflags/android/gflags/: gflags.h
app/src/main/cpp/gflags/test/: CMakeLists.txt
app/src/main/cpp/include/qtoken/: main.cpp
app/src/main/cpp/include/qtoken/coders/: concurrent_decoder.hpp  concurrent_encoder.hpp  polar_fbg.hpp
app/src/main/cpp/include/qtoken/globals/: globals.hpp  logger.cpp  logger.hpp
app/src/main/cpp/include/qtoken/nodes/: bootstrap.cpp  bootstrap.hpp  host.cpp  host.hpp  node.cpp  node.hpp
app/src/main/cpp/include/qtoken/receipt/: connection_handler.cpp  connection_handler.hpp  crypto_receipt.hpp  receipt_session.hpp
app/src/main/cpp/include/qtoken/tools/: utils.hpp
app/src/main/cpp/openssl/: Makefile  configdata.pm  setenv-android.sh
app/src/main/cpp/openssl-1.0.2/: Makefile  configdata.pm  libcrypto.so.1.1
app/src/main/cpp/openssl-1.0.2/Configurations/: windows-checker.pm  windows-makefile.tmpl
app/src/main/cpp/openssl-1.0.2/crypto/: buildinf.h
app/src/main/cpp/openssl-1.0.2/test/: asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  buildtest_c_ecdh  buildtest_c_ecdsa  (+137 more)
app/src/main/cpp/openssl-1.0.2/tools/: c_rehash
app/src/main/cpp/openssl/crypto/: buildinf.h
app/src/main/cpp/openssl/include/openssl/: opensslconf.h
app/src/main/cpp/qtoken/: .gitignore  .gitlab-ci.yml  Makefile  README.md  cmake_install.cmake  cppcheck.cmake  defaults.cfg
app/src/main/cpp/qtoken/.gitlab/ci/: analysis.gitlab-ci.yml  build.gitlab-ci.yml  docker.gitlab-ci.yml  global.gitlab-ci.yml  package.gitlab-ci.yml  test.gitlab-ci.yml
app/src/main/cpp/qtoken/docker/: Dockerfile.build  Dockerfile.test
app/src/main/cpp/qtoken/docs/: setup.md
app/src/main/cpp/qtoken/scripts/: control  gen_deploy.sh  package.sh  postinst  raspi-install.sh  ubuntu-install.sh
app/src/main/cpp/qtoken/src/: ConnectionHandler.cpp  ConnectionHandler.hpp  bootstrap.cpp  bootstrap.hpp  chunker.cpp  chunker.hpp  concurrent_decoder.cpp  concurrent_decoder.hpp  concurrent_encoder.cpp  concurrent_encoder.hpp  configs.cpp  configs.hpp  crypto_receipt.cpp  crypto_receipt.hpp  decoder.hpp  encoder.hpp  entanglement_decoder.hpp  entanglement_encoder.cpp  entanglement_encoder.hpp  globals.cpp  globals.hpp  host.cpp  host.hpp  lfsr.hpp  logger.cpp  logger.hpp  main.cpp  node.cpp  node.hpp  pipeline.hpp  polar_decoder.cpp  polar_decoder.hpp  polar_encoder.cpp  polar_encoder.hpp  polar_fbg.hpp  receipt_session.cpp  receipt_session.hpp  strings.hpp  types.hpp  utils.hpp
app/src/main/cpp/qtoken/test/: CMakeLists.txt.in  chunker_test.cpp  concurrent_coder_test.cpp  crypto_receipt_test.cpp  entanglement_test.cpp  host_test.cpp  lfsr_test.cpp  pipeline_test.cpp  polar_coder_test.cpp  polar_fbg_test.cpp  test_utils.hpp  types_test.cpp  utils_test.cpp
(+493 files in other folders)
